FEATURE: Reverse proxy port can be set in `config.json`.
Warning: The format of `config.json` (or `config.js`) has changed.
They must include a `port` and a `sites` keys.

Impacted lines of code were also refactored.

--- a/config.json.sample.json
+++ b/config.json.sample.json
@@ -1,8 +1,8 @@
 
 Remove all commentaries inside this configuration file before use the proxy !!!!!!! 
-
-[
-  {
+{
+  "port": 1337,
+  "sites": [{
     "hostProxy" : "acme.com", // name of the virtual server
   	"host": "://tex.avery.org", // name of the physical server
   	"port": 7777, // port number of the physical server
@@ -61,4 +61,4 @@ Remove all commentaries inside this configuration file before use the proxy !!!!
           "final": true
         }]
   }
-]
+]}
