FEATURE: Authentication against multiple sources (even of the same type).
Closes #12.

Warning: The format of `config.json` (or `config.js`) has changed 
(see sample files for more information).

--- a/config.json.sample.json
+++ b/config.json.sample.json
@@ -14,11 +14,9 @@ Remove all commentaries inside this configuration file before use the proxy !!!!
       "headersOffset":0 // also remove "part" of the path information (a part is the string between two '/')
       },
     "hideAuth":true, // hide the authentication information inside the http headers of the request
-    "ldap": { // LDAP server information
-      "url": "ldap://ldap.acme.com",
-      "id":"cn=", // how the user id is define in the request
-      "cn":"dc=acme,dc=com" // other entries in the request
-    },
+    "authentication": [
+      {"url": "ldap://ldap.acme.com", "id": "cn", "dn": "dc=acme,dc=com"}
+    ],
     "restricted": { // information about resources with restricted access
       "rocket": ["will.coyote"], // "name_of_the_resource_inside_the_url": ["list", "of", "authorized", "users", "id"],
       "magnet": ["will.coyote"],
@@ -29,7 +27,7 @@ Remove all commentaries inside this configuration file before use the proxy !!!!
 
     "rules":[    { // list rules that define the proxy behaviours for this server
           "control": "request.method != 'GET'", // define when this rules is trigged
-          "action": "authenticate([ldap], context, function(){AuthorizList(context, function(){proxyWork(context);});});", // what the proxy has to do
+          "action": "authenticate(context, function(){AuthorizList(context, function(){proxyWork(context);});});", // what the proxy has to do
           "final": true // define if the proxy has to search for other relevents rules
           },{
           "control": "true",
@@ -47,18 +45,13 @@ Remove all commentaries inside this configuration file before use the proxy !!!!
       "headersOffset":0
       },
     "hideAuth":true,
-    "ldap": {
-      "url": "ldap://ldap.acme.com",
-      "id": "cn=",
-      "cn": "dc=acme,dc=com"
-    },
-    "authData": { // information for the dummy authentication
-          "login": "roadrunner",
-          "pw": "bipbip"
-    },
+    "authentication: [
+      {"url": "ldap://ldap.acme.com", "id": "cn", "dn": "dc=acme,dc=com"},
+      {"login": "roadrunner", "password": "bipbip"}
+    ],
     "rules": [{
           "control": "request.method != 'GET'",
-          "action": "authenticate([ldap,dummy], context, function(){proxyWork(context);});",
+          "action": "authenticate(context, function(){proxyWork(context);});",
           "final": true
           },{
           "control": "true",
