--- a/config.json.sample.json
+++ b/config.json.sample.json
@@ -1,62 +1,60 @@
-
-Remove all commentaries inside this configuration file before use the proxy !!!!!!! 
 {
-  "port": 1337,
+  "port": 80,
   "sites": [{
-    "hostProxy" : "acme.com", // name of the virtual server
-  	"host": "://tex.avery.org", // name of the physical server
-  	"port": 7777, // port number of the physical server
-  	"path": "", // additional path information to access the physical server
-    "logFile": "acme.log", // name of the log file
-    "couchDBCompat":false, //if the proxy is used for CouchDB replication add nodejs version < 0.11.6
-    "rewritePath": { // rewrite the hostProxy name inside the answer headers
-      "enable":true,
-      "headersOffset":0 // also remove "part" of the path information (a part is the string between two '/')
-      },
-    "hideAuth":true, // hide the authentication information inside the http headers of the request
+    "hostProxy": "acme.com",
+  	"host": "tex.avery.org",
+  	"port": 7777,
+  	"path": "",
+    "logFile": "log/acme.log",
+    "couchDBCompat": false,
+    "rewritePath": {
+      "enable": true,
+      "headersOffset": 0
+    },
+    "hideAuth": true,
     "authentication": [
       {"url": "ldap://ldap.acme.com", "id": "cn", "dn": "dc=acme,dc=com"}
     ],
-    "restricted": { // information about resources with restricted access
-      "rocket": ["will.coyote"], // "name_of_the_resource_inside_the_url": ["list", "of", "authorized", "users", "id"],
+    "restricted": {
+      "rocket": ["will.coyote"],
       "magnet": ["will.coyote"],
       "false hole": ["will.coyote"],
       "rifle": ["elmer.fudd"],
       "ammo": ["elmer.fudd"]
-      },
-
-    "rules":[    { // list rules that define the proxy behaviours for this server
-          "control": "request.method != 'GET'", // define when this rules is trigged
-          "action": "authenticate(context, function(){AuthorizList(context, function(){proxyWork(context);});});", // what the proxy has to do
-          "final": true // define if the proxy has to search for other relevents rules
-          },{
-          "control": "true",
-          "action": "proxyWork(context);",
-          "final": true
-        }]
-  },
-  {"hostProxy":"test.acme.shop.com",
+    },
+    "rules": [{
+      "control": "request.method != 'GET'",
+      "action": "authenticate(context, function(){AuthorizList(context, function(){proxyWork(context);});});",
+      "final": true
+      }, {
+      "control": "true",
+      "action": "proxyWork(context);",
+      "final": true
+    }]
+  }, {
+    "hostProxy": "test.acme.shop.com",
   	"host": "tex.test.server.com",
   	"port": 1337,
   	"path": "/test/shop/acme/path",
     "logFile": "test_shop_acme.log",
     "rewritePath": {
-      "enable":true,
-      "headersOffset":0
-      },
-    "hideAuth":true,
-    "authentication: [
-      {"url": "ldap://ldap.acme.com", "id": "cn", "dn": "dc=acme,dc=com"},
+      "enable": true,
+      "headersOffset": 0
+    },
+    "hideAuth": true,
+    "authentication": [
+      {"url": "ldap://ldap.acme.com", "id": "uid", "dn": "dc=acme,dc=com"},
+      {"url": "ldap://ldap.acme.org", "id": "cn", "dn": "dc=acme,dc=org"},
       {"login": "roadrunner", "password": "bipbip"}
     ],
     "rules": [{
-          "control": "request.method != 'GET'",
-          "action": "authenticate(context, function(){proxyWork(context);});",
-          "final": true
-          },{
-          "control": "true",
-          "action": "proxyWork(context);",
-          "final": true
-        }]
+      "control": "request.method != 'GET'",
+      "action": "authenticate(context, function(){proxyWork(context);});",
+      "final": true
+    },{
+      "control": "true",
+      "action": "proxyWork(context);",
+      "final": true
+    }]
   }
 ]}
