--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main":"ProxyHTTP.js",
   "dependencies":{
     "ldapjs":">=0.7.x",
+    "winston":">=0.8.x",
     "async":">=0.9.x"
   },
   "engine":">= node 0.8.0",
