FEATURE: Session management with cookies.
Can customize path, name of user&password fields, session time, cookie name.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "ldapjs": ">=0.7.x",
     "winston": ">=0.8.x",
-    "async": ">=0.9.x"
+    "async": ">=0.9.x",
+    "cookies": ">=0.5"
   }
 }
