TEST: Authentication against a given username and password (#2).

--- a/conf/config.sample.json
+++ b/conf/config.sample.json
@@ -1,4 +1,5 @@
 {
+  "port": 1337,
   "sites": [{
     "hostProxy": "shop.acme.com",
     "authentication": [
@@ -16,6 +17,18 @@
     "rules": [{
       "control": "method != 'GET'",
       "action": "authenticate(context,function(){authorize(context,function(){proxyWork(context)})})"
+    }]
+  },{
+    "hostProxy": "traduxio.local",
+    "port": 5984,
+    "path": "/traduxio/_design/traduxio/_rewrite",
+    "hideLocationParts": 1,
+    "authentication": [
+      {"login": "alice", "password": "whiterabbit"}
+    ],
+    "rules": [{
+      "control": "/works/.test(path)",
+      "action": "authenticate(context, function(){proxyWork(context);});"
     }]
   }]
 }
