--- a/conf/config.sample.json
+++ b/conf/config.sample.json
@@ -1,21 +1,19 @@
 {
   "port": 1337,
   "sites": [{
-    "hostProxy": "shop.acme.com",
+    "hostProxy": "cassandre.local",
+    "port": 5984,
+    "path": "/cassandre/_design/cassandre/_rewrite",
+    "hideLocationParts": 1,
     "authentication": [
-      {"url": "ldap://ldap.acme.org", "id": "cn", "dn": "dc=acme,dc=org"},
-      {"url": "ldap://ldap.acme.com", "id": "uid", "dn": "ou=People,dc=acme,dc=com"},
-      {"login": "roadrunner", "password": "bipbip"}
+      {"login": "alice", "password": "whiterabbit"},
+      {"login": "mrwhite", "password": "alice"}
     ],
     "restricted": {
-      "rocket": ["will.coyote"],
-      "magnet": ["will.coyote"],
-      "false hole": ["will.coyote"],
-      "rifle": ["elmer.fudd"],
-      "ammo": ["elmer.fudd"]
+      "iamlate": ["mrwhite"]
     },
     "rules": [{
-      "control": "method != 'GET'",
+      "control": "method != 'GET' || /Wonderland/.test(path)",
       "action": "authenticate(context,function(){authorize(context,function(){proxyWork(context)})})"
     }]
   },{
