--- a/conf/config.sample.json
+++ b/conf/config.sample.json
@@ -7,7 +7,8 @@
     "hideLocationParts": 1,
     "authentication": [
       {"login": "alice", "password": "whiterabbit"},
-      {"login": "mrwhite", "password": "alice"}
+      {"login": "mrwhite", "password": "alice"},
+      {"url": "http://localhost:5984/"}
     ],
     "restricted": {
       "iamlate": ["mrwhite"]
