PROCESS: Hide application logs from Travis logs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 - npm install -g jasmine-node
 - npm install frisby
 - cp conf/config.sample.json conf/config.json
-- node app/proxy.js &
+- node app/proxy.js >/dev/null &
 # Install CouchApp
 - sudo pip install couchapp
 # Install Cassandre
