--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ addons:
   hosts:
     - cassandre.local
     - couchdb.local
+    - xcouchdb.local
 install:
 - npm install
 - npm install -g jasmine-node
