TEST: Proxy Authentication (aka "Forward authenticated login")
Warning: The format of `config.json` (or `config.js`) has changed.
`proxyAuth.headerName` is now `forwardedLoginHeader`.

--- a/conf/config.sample.json
+++ b/conf/config.sample.json
@@ -45,9 +45,17 @@
     "authentication": [
       {"login": "alice", "password": "whiterabbit"}
     ],
-    "proxyAuth": {
-      "headerName": "X-Auth-CouchDB-UserName"
-    },
     "rules":[]
+  },{
+    "hostProxy": "^xxxcouchdb.local",
+    "port": 5984,
+    "authentication": [
+      {"login": "hatter", "password": "unbirthday"}
+    ],
+    "forwardedLoginHeader": "X-Auth-CouchDB-UserName",
+    "rules": [{
+      "control": "true",
+      "action": "authenticate(context,function(){proxyWork(context)})"
+    }]
   }]
 }
