--- a/conf/config.sample.json
+++ b/conf/config.sample.json
@@ -19,6 +19,9 @@
     "rules": [{
       "control": "method != 'GET' || /Wonderland/.test(path)",
       "action": "authenticate(context,function(){authorize(context,function(){proxyWork(context)})})"
+    }, {
+      "control": "true",
+      "action": "authenticateIfPresent(context,function(){proxyWork(context)})"
     }]
   },{
     "hostProxy": "^couchdb.local",
