--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "An HTTP reverse proxy to bring authentication, authorization and accounting to RESTful applications",
   "version": "1.2015.0430",
   "dependencies": {
+    "express": ">=4.9",
     "ldapjs": ">=0.7.x",
     "winston": ">=0.8.x",
     "async": ">=0.9.x",
