--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "1.2015.0430",
   "dependencies": {
     "express": ">=4.9",
+    "vhost": ">=2.0",
+    "express-http-proxy": ">=0.6",
     "ldapjs": ">=0.7.x",
     "winston": ">=0.8.x",
     "async": ">=0.9.x",
