TEST: CouchDB protected by token.

--- a/conf/config.sample.json
+++ b/conf/config.sample.json
@@ -55,7 +55,7 @@
     "authentication": [
       {"login": "hatter", "password": "unbirthday"}
     ],
-    "forwardedLoginHeader": "X-Auth-CouchDB-UserName",
+    "forwardedLoginSecret": "secretkeyforcouchdbauthtoken",
     "rules": [{
       "control": "true",
       "action": "authenticate(context,function(){proxyWork(context)})"
