--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 services: couchdb
-language: node_js
+language:
+- node_js
+- ruby
 node_js: "0.12"
 addons:
   hosts:
+    - auth.local
     - cassandre.local
     - couchdb.local
     - xcouchdb.local
@@ -16,6 +19,8 @@ install:
 - node app/proxy.js >/dev/null &
 # Install CouchApp
 - sudo pip install couchapp
+# Install Capybara
+- gem install capybara-webkit rspec
 # Install Cassandre
 - curl -X PUT -d '"false"' localhost:5984/_config/httpd/secure_rewrites
 - curl -X PUT localhost:5984/cassandre
@@ -29,4 +34,6 @@ install:
 - curl -X PUT localhost:5984/cassandre/iamlate -d '{"corpus":"Wonderland", "name":"I am late"}'
 - curl -X PUT localhost:5984/_users/org.couchdb.user:hatter -H 'Accept:application/json' -H 'Content-Type:application/json' -d '{"name":"hatter", "password":"teaparty", "roles":[], "type":"user"}'
 - curl -X PUT localhost:5984/_config/admins/carroll -d '"curiouser"'
-script: jasmine-node spec/api/
+script:
+- jasmine-node spec/api/
+- xvfb-run rspec spec/features/*
