TEST: Authenticators priority.
If the login has been found by an authenticator 
and the password check failed, it shouldn't be 
checked by other authenticators.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ addons:
     - xcouchdb.local
     - xxcouchdb.local
     - xxxcouchdb.local
+    - auth_fixed.local
+    - auth_ldap.local
+    - auth_http.local
 install:
 - npm install
 - npm install -g jasmine-node
