--- a/conf/config.sample.json
+++ b/conf/config.sample.json
@@ -60,5 +60,41 @@
       "control": "true",
       "action": "authenticate(context,function(){proxyWork(context)})"
     }]
+  },{
+    "hostProxy": "auth_fixed.local",
+    "port": 5984,
+    "authentication": [
+      {"login": "alice", "password": "whiterabbit"},
+      {"login": "alice", "password": "rabbit"},
+      {"login": "mrwhite", "password": "alice"}
+    ],
+    "rules":[{
+      "control": "true",
+      "action": "authenticateIfPresent(context,function(){proxyWork(context)})"
+    }]
+  },{
+    "hostProxy": "auth_http.local",
+    "port": 5984,
+    "authentication": [
+      {"url": "http://localhost:5984/"},
+      {"login": "hatter", "password": "unbirthday"},
+      {"login": "mrwhite", "password": "alice"}
+    ],
+    "rules":[{
+      "control": "true",
+      "action": "authenticateIfPresent(context,function(){proxyWork(context)})"
+    }]
+  },{
+    "hostProxy": "auth_ldap.local",
+    "port": 5984,
+    "authentication": [
+      {"url": "ldap://ldap.forumsys.com", "id": "uid", "dn": "dc=example,dc=com"},
+      {"login": "riemann", "password": "secret"},
+      {"login": "mrwhite", "password": "alice"}
+    ],
+    "rules":[{
+      "control": "true",
+      "action": "authenticateIfPresent(context,function(){proxyWork(context)})"
+    }]
   }]
 }
