API: Domain cookie (to be used by SSO feature).
TODO: Refactoring site cookie management to reuse
these Express middleware functions.

--- a/conf/config.sample.json
+++ b/conf/config.sample.json
@@ -1,5 +1,7 @@
 {
   "port": 1337,
+  "authentication": {"login": "alice", "password": "whiterabbit"},
+  "domain": "local",
   "sites": [{
     "hostProxy": "cassandre.local",
     "port": 5984,
