--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "express": ">=4.9",
     "vhost": ">=2.0",
     "express-http-proxy": ">=0.6",
+    "express-session": ">=1.11",
+    "body-parser": ">=1.12",
     "ldapjs": ">=0.7.x",
     "winston": ">=0.8.x",
     "async": ">=0.9.x",
