--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,22 @@
+sudo: false
+
 services: couchdb
+
 language:
 - node_js
 - ruby
-node_js: "0.12"
+- python
+
+node_js: stable
+rvm: ruby-head
+python: 2.7
+
+cache:
+  directories:
+  - node_modules
+  - $HOME/.cache/pip/
+
+
 addons:
   hosts:
     - auth.local
@@ -14,14 +28,18 @@ addons:
     - auth_fixed.local
     - auth_ldap.local
     - auth_http.local
+
 install:
+- rvm install 2.2
 - npm install
 - npm install -g jasmine-node
 - npm install frisby
 - cp conf/config.sample.json conf/config.json
-- node app/proxy.js >/dev/null &
+- mkdir log/
+- touch log/misc.log
+- node app/proxy.js &
 # Install CouchApp
-- sudo pip install couchapp
+- pip install --user couchapp
 # Install Capybara
 - gem install capybara-webkit rspec
 # Install Cassandre
@@ -38,5 +56,5 @@ install:
 - curl -X PUT localhost:5984/_users/org.couchdb.user:hatter -H 'Accept:application/json' -H 'Content-Type:application/json' -d '{"name":"hatter", "password":"teaparty", "roles":[], "type":"user"}'
 - curl -X PUT localhost:5984/_config/admins/carroll -d '"curiouser"'
 script:
-- jasmine-node spec/api/
+- jasmine-node --verbose spec/api/
 - xvfb-run rspec spec/features/*
