--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "AAAforREST",
   "description": "An HTTP reverse proxy to bring authentication, authorization and accounting to RESTful applications",
   "version": "1.2015.0615",
+  "scripts": {
+    "start": "forever start app/proxy.js",
+    "stop": "forever stop app/proxy.js",
+    "test": "node app/proxy.js"
+  },
   "dependencies": {
     "cors": "^2.8.4",
     "express": ">=4.9",
@@ -9,6 +14,7 @@
     "express-http-proxy": ">=0.6",
     "express-session": ">=1.11",
     "body-parser": ">=1.12",
+    "forever": "^0.15.3",
     "ldapjs": ">=0.7.x",
     "winston": ">=0.8.x",
     "async": ">=0.9.x",
