--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "An HTTP reverse proxy to bring authentication, authorization and accounting to RESTful applications",
   "version": "1.2015.0615",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": ">=4.9",
     "vhost": ">=2.0",
     "express-http-proxy": ">=0.6",
