FEATURE: Set a virtual host according to a hostname.
Breaking change (with v1):

- `proxyHost` syntax is no more a regular expression
but a string (with or without wildcards).

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Hypertopic/AAAforREST#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "vhost": "^3.0.2"
   }
 }
