--- a/config.sample.json
+++ b/config.sample.json
@@ -1,3 +1,8 @@
 {
-  "port": 1337
+  "port": 1337,
+  "sites": [{
+    "hostProxy": "*.couchdb.local"
+  }, {
+    "hostProxy": "xcouchdb.local"
+  }]
 }
