FEATURE: Set the vhost as a reverse proxy.
Options (compatible with v1):
- `host` (default: `localhost`),
- `port` (default: `80`),
- `path` (default: ``),
- `hideLocationParts` (default: 0).

--- a/config.sample.json
+++ b/config.sample.json
@@ -1,8 +1,12 @@
 {
   "port": 1337,
   "sites": [{
-    "hostProxy": "*.couchdb.local"
+    "hostProxy": "cassandre.local",
+    "port": 15984,
+    "path": "/cassandre/_design/cassandre/_rewrite",
+    "hideLocationParts": 1
   }, {
-    "hostProxy": "xcouchdb.local"
+    "hostProxy": "couchdb.local",
+    "port": 15984
   }]
 }
