--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Hypertopic/AAAforREST#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "http-proxy-middleware": "^0.18.0",
     "vhost": "^3.0.2"
   }
 }
