--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Hypertopic/AAAforREST#readme",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "http-proxy-middleware": "^0.18.0",
     "vhost": "^3.0.2"
